--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,11 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+#page-body{
+  margin:5%;
+  padding: 2;
+  
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
