se altero la url de  articulo para que pase un parametro ,permitiendo que el contenido de articulo cambio segun lo que se pase en el parametro de la url

--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,8 @@ nav a:hover {
 }
 
 #page-body {
-  max-width: 700px;
-  margin: auto;
-  padding-top: 64px;
+  padding: 5%;
+
 }
 
 .article-list-item {
